#11427 closed defect (fixed)

vorbis decoder broken

Reported by: Felix von Leitner Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: vorbis
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug: Some of my old ogg vorbis files don't play anymore.

How to reproduce:

% ffmpeg -i "01 Temptation waits.ogg"/tmp/t.wav

ffmpeg version N-118328-g504df09c34 Copyright (c) 2000-2025 the FFmpeg developers
built with gcc 14.2.0 (GCC)
configuration: --prefix=/usr --libdir=/usr/lib64 --shlibdir=/usr/lib64 --enable-gpl --enable-libx264 --enable-libxvid --enable-libtheora --enable-libmp3lame --enable-pthreads --enable-libvorbis --enable-gpl --enable-postproc --enable-shared --enable-libspeex --enable-nonfree --enable-libvpx --enable-vaapi --extra-cflags=-I/usr/X11R7/include --extra-ldflags='-L/usr/local/lib64 -L/usr/X11R7/lib64' --enable-libopus --enable-libfdk_aac --enable-libx265 --enable-openssl --enable-libaom --enable-libdav1d --enable-librav1e --disable-htmlpages --enable-libfreetype --enable-fontconfig
libavutil      59. 55.100 / 59. 55.100
libavcodec     61. 31.101 / 61. 31.101
libavformat    61.  9.106 / 61.  9.106
libavdevice    61.  4.100 / 61.  4.100
libavfilter    10.  6.101 / 10.  6.101
libswscale      8. 13.100 /  8. 13.100
libswresample   5.  4.100 /  5.  4.100
libpostproc    58.  4.100 / 58.  4.100

Decoding works fine if I manually add -c:a libvorbis before the -i

Attachments (1)

01 Temptation waits.ogg (97.7 KB ) - added by Felix von Leitner 18 months ago.
first four seconds of the ogg vorbis file in question

Download all attachments as: .zip

Change History (4)

by Felix von Leitner, 18 months ago

Attachment: 01 Temptation waits.ogg added

first four seconds of the ogg vorbis file in question

comment:1 by James, 17 months ago

Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by Michael Niedermayer, 16 months ago

Bugfix for this is on ffmpeg-devel

comment:3 by Michael Niedermayer, 14 months ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.